# turtlebot_obstacle_avoidence

./: CMakeLists.txt  LICENSE  README.md  package.xml  run_cppcheck.sh  run_cpplint.sh
launch/: move.launch
results/: cppcheck_test.txt  cpplint_test.txt  topics.bag
src/: move.cpp
world/: turtle_world.sdf
