<?xml version="1.0"?>
<package format="2">
  <name>turtlebot_obstacle_avoidence</name>
  <version>0.1.0</version>
  <description>Obstacle avoidence algorithm for turtlebot 3</description>

  <maintainer email="adiram@umd.edu">Aditi Ramadwar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
